Fixed spacing for home page by adding padding for text.

--- a/components/AboutTechnolgapSection/AboutTechnolgapSection.module.scss
+++ b/components/AboutTechnolgapSection/AboutTechnolgapSection.module.scss
@@ -39,6 +39,7 @@
 
 .WITText {
     font-size: 25px;
+    padding: 10px 0px 0px 0px;
 }
 
 .WITButton {
